--- a/order/view/admin.html
+++ b/order/view/admin.html
@@ -8,7 +8,7 @@
     <script src="static/jquery/jquery.min.js"></script>
     <script src="static/bootstrap/js/bootstrap.min.js"></script>
     <script src="static/angular/angular.min.js"></script>
-    <script src="static/angular/app.js"></script>
+    <script src="static/angular/adminApp.js"></script>
 </head>
 <body ng-app="adminApp" ng-controller="adminCtrl">
 
