--- a/order/view/admin.html
+++ b/order/view/admin.html
@@ -49,7 +49,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr ng-repeat="x in dbresult">
+                    <tr ng-repeat="x in menuresult">
                         <td><input type="text" class="form-control" ng-model="x.number"></td>
                         <td><input type="text" class="form-control" ng-model="x.name"></td>
                         <td><input type="text" class="form-control" ng-model="x.price"></td>
