--- a/order/view/user.html
+++ b/order/view/user.html
@@ -16,7 +16,20 @@
 <div class="container-fluid">
     <h1>user</h1>
     <div class="row">
+        
         <div class="col-sm-10" style="background-color:lavender;">
+            <div class="col-sm-4">
+                <table class="table">
+                    <tr>
+                        <td>table number</td>
+                        <td>
+                            <select ng-model="tablenumber">
+                                <option ng-repeat="option in tableCountsShow" ng-value="option">{{option}}</option>
+                            </select>
+                        </td>
+                    </tr>
+                </table>
+            </div>
             <table class="table table-striped">
                 <thead>
                     <tr>
@@ -26,7 +39,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr ng-repeat="x in dbresult">
+                    <tr ng-repeat="x in menuresult">
                         <td>{{ x.name }}</td>
                         <td>{{ x.price }}</td>
                         <td><input type="text" class="form-control" ng-model="x.count"></td>
