--- a/order/view/admin.html
+++ b/order/view/admin.html
@@ -55,10 +55,10 @@
                         <td><input type="text" class="form-control" ng-model="x.price"></td>
                         <td><input type="text" class="form-control" ng-model="x.descript"></td>
                         <td>
-                            <button type="button" class="btn btn-primary" ng-click="delOneDb(x)">Del</button>
-                        </td>
-                        <td>
-                            <button type="button" class="btn btn-primary" ng-click="modifyOneDb(x)">Modify</button>
+                            <div class="btn-group">
+                                <button type="button" class="btn btn-primary" ng-click="delOneDb(x)">Del</button>
+                                <button type="button" class="btn btn-primary" ng-click="modifyOneDb(x)">Modify</button>
+                            </div>
                         </td>
                     </tr>
                 </tbody>
