--- a/order/view/user.html
+++ b/order/view/user.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>admin</title>
+    <title>user</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="static/bootstrap/css/bootstrap.min.css">
@@ -21,8 +21,8 @@
             <div class="col-sm-4">
                 <table class="table">
                     <tr>
-                        <td>table number</td>
                         <td>
+                            <span class="label label-default">table number</span>
                             <select ng-model="tablenumber">
                                 <option ng-repeat="option in tableCountsShow" ng-value="option">{{option}}</option>
                             </select>
