--- a/order/view/admin.html
+++ b/order/view/admin.html
@@ -14,7 +14,9 @@
 <body ng-app="adminApp" ng-controller="adminCtrl">
 
 <div class="container-fluid">
-    <h1>admin</h1>
+    <div class="page-header">
+        <h1>Admin <small>modify configs</small></h1>
+    </div>
 
     <h3>menu list</h3>
     <div class="row">
