--- a/order/view/user.html
+++ b/order/view/user.html
@@ -14,7 +14,9 @@
 <body ng-app="userApp" ng-controller="userCtrl">
 
 <div class="container-fluid">
-    <h1>user</h1>
+    <div class="page-header">
+        <h1>User <small></small></h1>
+    </div>
     <div class="row">
         
         <div class="col-sm-10" style="background-color:lavender;">
@@ -42,7 +44,7 @@
                     <tr ng-repeat="x in menuresult">
                         <td>{{ x.name }}</td>
                         <td>{{ x.price }}</td>
-                        <td><input type="text" class="form-control" ng-model="x.count"></td>
+                        <td><input type="number" ng-model="x.count"></td>
                     </tr>
                 </tbody>
             </table>
