--- a/order/view/seller.html
+++ b/order/view/seller.html
@@ -52,7 +52,7 @@
                 </thead>
                 <tbody>
                     <tr ng-repeat="x in userorderresult">
-                        <td>{{ x.formatTime }}</td>
+                        <td>{{ x.ftime }}</td>
                         <td>{{ x.tablenumber }}</td>
                         <td>
                             <table>
