--- a/order/view/admin.html
+++ b/order/view/admin.html
@@ -79,7 +79,7 @@
                     </td>
                 </tr>
             <table>
-            <button type="button" class="btn btn-primary" ng-click="saveTableCounts('tableCounts',tableCounts)">Save</button>
+            <button type="button" class="btn btn-primary" ng-click="saveOthers()">Save</button>
         <div>
     </div>
     
