--- a/order/view/user.html
+++ b/order/view/user.html
@@ -8,6 +8,7 @@
     <script src="static/jquery/jquery.min.js"></script>
     <script src="static/bootstrap/js/bootstrap.min.js"></script>
     <script src="static/angular/angular.min.js"></script>
+    <script src="static/bootstrap/js/bootbox.min.js"></script>
     <script src="static/angular/utils.js"></script>
     <script src="static/angular/userApp.js"></script>
 </head>
