--- a/order/view/admin.html
+++ b/order/view/admin.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="static/bootstrap/css/bootstrap.min.css">
     <script src="static/jquery/jquery.min.js"></script>
+    <script src="static/jquery/jquery.canvasjs.min.js"></script>
     <script src="static/bootstrap/js/bootstrap.min.js"></script>
     <script src="static/angular/angular.min.js"></script>
     <script src="static/angular/utils.js"></script>
@@ -96,6 +97,13 @@
         <div>
     </div>
     
+    <h3>Chart</h3>
+    <div class="row">
+        <div class="col-sm-12" style="background-color:lavender;">
+            <div id="chartContainer" style="height: 300px; width: 100%;"></div>
+        <div>
+    </div>
+
 </div>
 
 </body>
