--- a/order/view/admin.html
+++ b/order/view/admin.html
@@ -11,6 +11,7 @@
     <script src="static/angular/angular.min.js"></script>
     <script src="static/angular/utils.js"></script>
     <script src="static/angular/adminApp.js"></script>
+    <script src="static/angular/mychart.js"></script>
 </head>
 <body ng-app="adminApp" ng-controller="adminCtrl">
 
@@ -100,7 +101,7 @@
     <h3>Chart</h3>
     <div class="row">
         <div class="col-sm-12" style="background-color:lavender;">
-            <div id="chartContainer" style="height: 300px; width: 100%;"></div>
+            <div id="dailyChart" style="height: 300px; width: 100%;">
         <div>
     </div>
 
