--- a/order/view/admin.html
+++ b/order/view/admin.html
@@ -118,6 +118,12 @@
                         </td>
                     </tr>
                     <tr>
+                        <td>Dropbox Access token</td>
+                        <td>
+                            <input type="text" class="form-control" ng-model="dropboxAccessToken">
+                        </td>
+                    </tr>
+                    <tr>
                         <td><button type="button" class="btn btn-primary" ng-click="saveOthers()">Save</button></td>
                         <td></td>
                     </tr>
