--- a/order/view/user.html
+++ b/order/view/user.html
@@ -27,7 +27,7 @@
                     <tr>
                         <td>
                             <span class="label label-default">table number</span>
-                            <select ng-disabled="tablenumber != ''" [ngStyle]="{'background-color': color}">
+                            <select ng-disabled="tablenumber != ''">
                                 <option ng-repeat="option in tableCountsShow" ng-value="option" ng-selected="option==tablenumber">{{option}}</option>
                             </select>
                         </td>
