--- a/order/view/admin.html
+++ b/order/view/admin.html
@@ -20,8 +20,23 @@
         <h1>Admin <small>modify configs</small></h1>
     </div>
 
-    <div class="row">
-        <div class="col-sm-12" style="background-color:lavender;">
+    <ul id="adminTab" class="nav nav-tabs">
+        <li class="active">
+            <a href="#menu" data-toggle="tab">menu</a>
+        </li>
+        
+        <li><a href="#others" data-toggle="tab">others</a></li>
+        <li class="dropdown">
+            <a href="#" id="reportDropdown" class="dropdown-toggle" data-toggle="dropdown">
+                report
+            </a>
+            <ul class="dropdown-menu" role="menu" aria-labelledby="reportDropdown">
+                <li><a href="#chart" tabindex="-1" data-toggle="tab">chart</a></li>
+            </ul>
+        </li>
+    </ul>
+    <div id="adminTabContent" class="tab-content">
+        <div class="tab-pane fade in active" id="menu">
             <div class="panel panel-default">
                 <div class="panel-heading">Add menu</div>
                 <table class="table table-striped">
@@ -80,7 +95,15 @@
                     </tbody>
                 </table>
             </div>
-
+        </div>
+        <div class="tab-pane fade" id="chart">
+            <div class="panel panel-success">
+                <div class="panel-heading">Chart</div>
+                <canvas id="dailyChart"></canvas>
+                <canvas id="monthChart"></canvas>
+            </div>
+        </div>
+        <div class="tab-pane fade" id="others">
             <div class="panel panel-default">
                 <div class="panel-heading">Others</div>
                 <table class="table table-hover">
@@ -130,16 +153,8 @@
                 <table>
                 
             </div>
-
-            <div class="panel panel-success">
-                <div class="panel-heading">Chart</div>
-                <canvas id="dailyChart"></canvas>
-                <canvas id="monthChart"></canvas>
-            </div>
-
         </div>
-    </div>
-    
+    </div> 
 </div>
 
 </body>
