--- a/order/view/user.html
+++ b/order/view/user.html
@@ -47,7 +47,7 @@
                         <td>{{ x.name }}</td>
                         <td>{{ x.price }}</td>
                         <td>
-                            <input type="number" style="width:60px" min=1 class="form-control" ng-model="x.count">
+                            <input type="text" style="width:60px" min=0 class="form-control" ng-model="x.count" ng-disabled="true">
                         </td>
                         <td>
                             <div class="btn-group">
