--- a/order/view/admin.html
+++ b/order/view/admin.html
@@ -133,6 +133,9 @@
                                 <input type="text" class="form-control" disabled ng-model="backupTime">
                             </div>
                         </td>
+                        <td>
+                            <button class="btn btn-danger" type="button" ng-click="exportDb()">Export</button>
+                        </td>
                     </tr>
                     <tr>
                         <td>Restore</td>
