--- a/order/view/admin.html
+++ b/order/view/admin.html
@@ -142,6 +142,9 @@
                         <td>
                             <button class="btn btn-danger" type="button" ng-click="restoreDb()">Restore</button>
                         </td>
+                        <td>
+                            <button class="btn btn-danger" type="button" ng-click="restoreFromDropbox()">Restore from Dropbox</button>
+                        </td>
                     </tr>
                     <tr>
                         <td>Dropbox Access token</td>
